# a13c-embedded

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/drivers/: button.rs  fan.rs  heater.rs  joystick.rs  l298n.rs  max6675.rs  mod.rs  potentiometer.rs  servo_motor.rs  thermistor.rs
src/drivers/led/: mod.rs  pwm.rs  rgb.rs
src/drivers/spi_flash_memory/: address.rs  chip.rs  commands.rs  mod.rs
src/features/: mod.rs
src/features/storage/: mod.rs
src/features/temperature/: pid.rs
src/features/temperature/safety/: allowed_range.rs  mod.rs
src/features/temperature/safety/temperature_change/: keep_mode.rs  mod.rs  rising_mode.rs
src/hardware/: mod.rs
src/hardware/espressif/: mod.rs
src/hardware/espressif/peripherals/: delay.rs  mod.rs  real_time.rs  system_time.rs  timer.rs  uart.rs  watchdog.rs
src/hardware/mock/: error.rs  input.rs  pwm.rs  time.rs  timer.rs  uart.rs  watchdog.rs
src/peripherals/: adc.rs  interrupt.rs  mod.rs  pwm.rs  system_time.rs  timer.rs  uart.rs
src/peripherals/pwm/: mod.rs  system_time.rs  timer.rs
src/peripherals/specific_hardware/: mod.rs
src/peripherals/specific_hardware/esp32_s3/: adc.rs  interrupt.rs  system_time.rs  timer.rs  uart.rs
src/peripherals/specific_hardware/espressif/: pwm.rs  system_time.rs  timer.rs
src/peripherals/specific_hardware/mock/: error.rs  mod.rs  output.rs  spi.rs  time.rs  timer.rs
src/peripherals/time/: mod.rs  real_time.rs  system_time.rs  timer.rs
src/utils/: mod.rs  range.rs
src/utils/algorithms/: bresenham.rs  mod.rs
src/utils/collections/: list.rs
src/utils/math/: micromath.rs  mod.rs  number_extensions.rs  percentage.rs
src/utils/physical_quantities/: angle.rs  color.rs  duration.rs  frequency.rs  mod.rs  rotational_direction.rs  temperature.rs
