[package]
name = "a13c-embedded"
version = "0.1.0"
authors = ["Angelo Cipriani"]
edition = "2021"
description = "Common utilities and drivers for embedded systems. It's independent from the actual hardware used (it's an HAL), which makes it easily testable and usable by all the microcontrollers."

[features]
default = ["graphics"]

graphics = ["dep:embedded-graphics"]

[dependencies]
embedded-hal = "1.0.0"
pid = "4.0.0"
enumset = "1.1"
ringbuffer = "0.15"

embedded-graphics = { version = "0.8.1", optional = true }

micromath = { version = "2.1", features = ["vector"] }