[package]
name = "a13c-embedded"
version = "0.1.0"
authors = ["Angelo Cipriani"]
edition = "2021"
description = "Common utilities and drivers for embedded systems. It's independent from the actual hardware used (it's an HAL), which makes it easily testable and usable by all the microcontrollers."

[features]
default = ["graphics"]

embedded-svc = ["dep:embedded-svc"]

graphics = ["dep:embedded-graphics", "dep:embedded-graphics-framebuf", "dep:display-interface", "dep:display-interface-spi"]
storage = ["dep:embedded-storage", "dep:embedded-sdmmc"]

hardware-esp32-s3 = ["dep:esp-idf-sys", "dep:esp-idf-hal", "dep:esp-idf-svc"]
hardware-esp32 = ["dep:esp-idf-sys", "dep:esp-idf-hal", "dep:esp-idf-svc"]
hardware-rp2040 = ["dep:rp2040-hal", "dep:cortex-m"]
hardware-stm32f730 = ["dep:stm32f7xx-hal"]

[dependencies]
embedded-hal = "1.0.0"
embedded-svc = { version = "0.27", optional = true }
embedded-io = "0.6"

pid = "4.0.0"
enumset = "1.1"
ringbuffer = "0.15"
strum = { version = "0.25", features = ["derive"] }

log = { version = "0.4", default-features = false }

embedded-graphics = { version = "0.8.1", optional = true }
embedded-graphics-framebuf = { version = "0.5", optional = true }
display-interface-spi = { version = "0.5", optional = true }
display-interface = { version = "0.5", optional = true }

micromath = { version = "2.1", features = ["vector"] }


embedded-storage = { version = "0.3", optional = true }
embedded-sdmmc = { version = "0.7", optional = true }

time = { version = "0.3", default-features = false }

esp-idf-sys = { version = "0.34", optional = true, default-features = false }
esp-idf-hal = { version = "0.43", optional = true, default-features = false }
esp-idf-svc = { version = "0.48", optional = true, default-features = false }

cortex-m = { version = "0.7", optional = true }

rp2040-hal = { version = "0.10", optional = true }

stm32f7xx-hal = { version = "0.7", optional = true, features = ["stm32f730"] }